src/third_party/nasm/travis/test/align13s.stderr
./travis/test/align13s.asm:9: error: segment alignment `13' is not power of two
./travis/test/align13s.asm:12: error: segment alignment `13' is not power of two
./travis/test/align13s.asm:15: error: segment alignment `13' is not power of two