src/third_party/nasm/travis/test/align13s.asm
; Test of non-power-of-2 alignment

%use smartalign

	bits 32

	inc eax
	inc eax
	align 13
	inc eax
	inc eax
	align 13
	inc eax
	inc eax
	align 13
	inc eax
	inc eax
